Created view to add reparacoes expresso